// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-sidebar/Sidebar should render activity sidebar 1`] = `
<Fragment>
  <ActivitySidebar
    file={
      Object {
        "id": "id",
      }
    }
    startMarkName="activity_sidebar_JS_LOADING"
  />
</Fragment>
`;

exports[`elements/content-sidebar/Sidebar should render details sidebar 1`] = `
<Fragment>
  <DetailsSidebar
    startMarkName="details_sidebar_JS_LOADING"
  />
</Fragment>
`;

exports[`elements/content-sidebar/Sidebar should render metadata sidebar 1`] = `
<Fragment>
  <MetadataSidebar
    startMarkName="metadata_sidebar_JS_LOADING"
  />
</Fragment>
`;

exports[`elements/content-sidebar/Sidebar should render no sidebar 1`] = `<Fragment />`;

exports[`elements/content-sidebar/Sidebar should render skills sidebar 1`] = `
<Fragment>
  <SkillsSidebar
    file={
      Object {
        "id": "id",
      }
    }
    key="id"
    startMarkName="skills_sidebar_JS_LOADING"
  />
</Fragment>
`;
